fixed issue with colors not showing up in pie chart

--- a/src/components/settings/categories.css
+++ b/src/components/settings/categories.css
@@ -4,3 +4,8 @@
     border-radius: 4px;
     display: inline-block;
 }
+
+.categories__color-header{
+    display: flex;
+    gap: 10px;
+}
